fix info-box whitespace wrapping

--- a/SalonML/SalonML/src/app/core/home/resume-contact-us/resume-contact-us.component.css
+++ b/SalonML/SalonML/src/app/core/home/resume-contact-us/resume-contact-us.component.css
@@ -71,3 +71,7 @@
 .btn-disabled:disabled {
   pointer-events: none;
 }
+
+.address-item {
+  white-space: nowrap;
+}
